# vixen-helper

./: CMakeLists.txt  README.md
data/: font_1.fnt
data/sprites/: Fade.json
module/: CMakeLists.txt  vixen-helper.h  vixen-helper.yml
module/src/: controller.c  controller.h  main.c
platform/vita/sce_sys/livearea/contents/: template.xml
src/: ResourceManager.cpp  ResourceManager.h  Settings.cpp  Settings.h  main.cpp  version.h
src/Base/: Delegate.h  Singleton.h
src/Event/: Dispatcher.cpp  Dispatcher.h  Event.cpp  Event.h  EventTarget.cpp  EventTarget.h  Gamepad.cpp  Gamepad.h  Handler.h  Keyboard.cpp  Keyboard.h  State.cpp  State.h  Text.cpp  Text.h
src/Game/: Game.cpp  Game.h
src/Graphics/: Font.cpp  Font.h  Point.cpp  Point.h  Rect.cpp  Rect.h  Renderer.cpp  Renderer.h  Size.cpp  Size.h  Sprite.cpp  Sprite.h  Sprites.cpp  Sprites.h  Surface.cpp  Surface.h  types.h  vga_palette.h
src/State/: DeviceList.cpp  DeviceList.h  DeviceReading.cpp  DeviceReading.h  DeviceWaiting.cpp  DeviceWaiting.h  Exit.cpp  Exit.h  FadeOut.cpp  FadeOut.h  Finished.cpp  Finished.h  Start.cpp  Start.h  State.cpp  State.h
src/Utils/: Common.h  Logger.cpp  Logger.h
src/common/: basics.h  misc.cpp  misc.h
